<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    tools:context=".CheckEmailActivity">

    <ImageView
        android:id="@+id/signOutImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sign_out"
        android:layout_marginRight="20dp"
        tools:ignore="VectorDrawableCompat"
        />

    <TextView
        android:id="@+id/tVerifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/knewave"
        android:gravity="center"
        android:text="@string/title_check_email"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVerificaCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/knewave"
        android:text="@string/subtitle_check_email"
        app:layout_constraintTop_toBottomOf="@+id/tVerifica"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/veficateEmailAppCompatButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_buttom"
        android:paddingLeft="64dp"
        android:layout_gravity="center"
        android:fontFamily="@font/knewave"
        app:layout_constraintTop_toBottomOf="@+id/tVerificaCon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingRight="64dp"
        android:text="@string/continue_check_email"
        android:textColor="@color/black" />



</androidx.constraintlayout.widget.ConstraintLayout>