<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash"
    tools:context=".problemas.CrearActActivity">
    <EditText
        android:id="@+id/Descripcion"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/ic_field"
        android:backgroundTint="@color/white"
        android:drawablePadding="16dp"
        android:ems="10"
        android:textAlignment="center"
        android:fontFamily="@font/knewave"
        android:hint="@string/descripcion"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>
    <ImageView
        android:id="@+id/backImageCre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/tiempoas"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/ic_field"
        android:backgroundTint="@color/white"
        android:drawablePadding="16dp"
        android:ems="10"
        android:textAlignment="center"
        android:fontFamily="@font/knewave"
        android:hint="@string/tiempoas"
        android:inputType="number"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Descripcion">
    </EditText>
    <EditText
        android:id="@+id/tiempo"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/ic_field"
        android:backgroundTint="@color/white"
        android:drawablePadding="16dp"
        android:ems="10"
        android:textAlignment="center"
        android:fontFamily="@font/knewave"
        android:hint="@string/tiempo"
        android:inputType="number"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tiempoas">
    </EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCrearActividad"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/ic_buttom"
        android:fontFamily="@font/knewave"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/actividad"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiempo" />

</androidx.constraintlayout.widget.ConstraintLayout>