<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".problemas.ForoActivity"
    android:background="@color/splash">
    <TextView
        android:id="@+id/tpregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/knewave"
        android:gravity="center"
        android:text="@string/preguntaA"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tpregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="vertical"
            android:padding="16dp"

            >

            <TextView
                android:id="@+id/preguntaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/knewave"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/trespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/knewave"
        android:gravity="center"
        android:text="@string/respuestas"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewa" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/trespuesta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"

            >

            <TextView
                android:id="@+id/respuestaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/knewave"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:scrollbars="vertical"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResponder"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_buttom"
        android:fontFamily="@font/knewave"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/responder"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewb" />

    <ImageView
        android:id="@+id/backImageForo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>